<?xml version="1.0"?>
<package format="2">
    <name>ros_video_streaming</name>
    <version>2.0.0</version>
    <license>MIT</license>

    <description>Video4Linux2 video streaming</description>

    <maintainer email="ramilsafnab1996@gmail.com">Ramil Safin</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

    <build>roscpp</build>
    <build>cv_bridge</build>
    <build>sensor_msgs</build>
    <build>image_transport</build>
    <build>camera_info_manager</build>

    <!-- system -->
    <build>v4l-utils</build>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
