<?xml version="1.0"?>
<package format="2">
    <name>ros_video_streaming</name>
    <version>2.0.0</version>
    <license>MIT</license>

    <description>Video4Linux2 video streaming</description>

    <maintainer email="ramilsafnab1996@gmail.com">Ramil Safin</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>cv_bridge</depend>
    <depend>sensor_msgs</depend>
    <depend>image_transport</depend>
    <depend>camera_info_manager</depend>

    <!-- system -->
    <depend>v4l-utils</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
